fix: increases navbar height when scrolling on mobile

--- a/components/header.module.css
+++ b/components/header.module.css
@@ -72,7 +72,7 @@
 .navbarNav {
     width: 100%;
     align-items: center;
-    height: 39px;
+    height: 50px;
     align-content: center;
 }
 
